--- a/memory-game/my-react-app/src/components/Nav/Nav.css
+++ b/memory-game/my-react-app/src/components/Nav/Nav.css
@@ -1,56 +1,75 @@
 nav {
-    width: 75%;
-    /* font-size: 22px; */
-    /* color: #CCDBDC; */
-    /* margin-bottom: 50px; */
-    background-color: rgb(224, 166, 7);
-    height: auto;
-    /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
+  width: 100%;
+  background-color: rgb(224, 166, 7);
+  height: auto;
+}
 
-  }
-  
-  #gameScore, #highScore, #message{
-    font-size: 50px;
-    /* padding-right: 10px; */
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  }
+#gameScore,
+#highScore,
+#message {
+  font-size: 50px;
+  /* padding-right: 10px; */
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+}
 /* 
   #gameScore {
     text-align: right;
   
   } */
 
-  #highScore {
-    text-align: right;
-    color: rgb(233, 206, 88);
-  }
+#highScore {
+  text-align: right;
+  /* color: rgb(233, 206, 88); */
+  color: white;
+  font-weight: 400;
+}
 
-  #message{
-    color: red;
-    text-align: center;
-  }
+#message {
+  color: red;
+  text-align: center;
+}
 
+.header {
+  /* color: rgb(233, 206, 88); */
+  color: white;
+  font-size: 50px;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-weight: 400;
+}
+
+nav li {
+  display: flex;
+  padding: 0px 50px;
+  /* width: 25%; */
+}
+
+ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 100px;
+  margin: auto;
+}
+
+@media only screen and (max-width: 750px) {
+  #gameScore,
+  #highScore,
+  a {
+    font-size: 25px;
+    text-decoration: none;
+    font-weight: 400;
+  }
   .header {
-    color: rgb(233, 206, 88);
-    font-size: 50px;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 25px;
+    text-align: center;
+    font-weight: 400;
   }
-  
-  
-  nav li {
-    display: inline-block;
-    padding: 0px 250px;
-    /* width: 25%; */
-  }
-  
   ul {
-    /* display: flex; */
-    align-items: center;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
   }
-  
-  @media only screen and (max-width: 750px) {
-    #gameScore, #highScore, a {
-      font-size: 1rem;
-      text-decoration: none;
-    }
+  nav {
+    margin-top: 10px;
+  }
 }
