--- a/memory-game/my-react-app/src/components/Wrapper/Wrapper.css
+++ b/memory-game/my-react-app/src/components/Wrapper/Wrapper.css
@@ -1,21 +1,15 @@
 .wrapper {
-    background-image: url("https://wallpapercave.com/wp/DO9v47p.jpg");
-    background-size: cover;
-    /* height: 100%;
-    display: flex;
-    flex-flow: row wrap;
-     justify-content: space-around;
-    align-content: flex-start;
-    overflow: auto;
-    padding-bottom: 50px; */
-    padding-top: 50px;
-    /* background: #ECEFF1; */
-    height: 100%;
-    display: flex;
-    flex-flow: row wrap;
-    padding: 20px;
-    text-align: center;
-    justify-content: space-around;
-    align-content: flex-start;
-    overflow: auto;
-  }
+  background-image: url("https://wallpapercave.com/wp/DO9v47p.jpg");
+  background-size: cover;
+  /* opacity: 0.6; */
+  padding-top: 50px;
+  /* background-color: rgba(0, 0, 0); */
+  height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  padding: 20px;
+  /* text-align: center; */
+  justify-content: space-around;
+  align-content: flex-start;
+  overflow: auto;
+}
